# environ

./: .gitignore  .gitmodules  AGENTS.md  AboutPage.idl  AboutPage.xaml  AboutPage.xaml.cpp  AboutPage.xaml.h  App.xaml  App.xaml.cpp  App.xaml.h  CLAUDE.md  CMakeLists.txt  CMakePresets.json  EnvVariableViewModel.cpp  EnvVariableViewModel.h  EnvVariableViewModel.idl  Environ.rc  Environ.slnx  Environ.vcxproj  Environ.vcxproj.filters  EnvironmentPage.idl  EnvironmentPage.xaml  EnvironmentPage.xaml.cpp  EnvironmentPage.xaml.h  GEMINI.md  HistoryEntryViewModel.cpp  HistoryEntryViewModel.h  HistoryEntryViewModel.idl  HistoryPage.idl  HistoryPage.xaml  HistoryPage.xaml.cpp  HistoryPage.xaml.h  LICENSE  MainWindow.idl  MainWindow.xaml  MainWindow.xaml.cpp  MainWindow.xaml.h  Package.appxmanifest  README.md  Resource.h  (+23 more)
.claude/: settings.local.json
.claude/agents/: code-reviewer.md
.gemini/agents/: code-reviewer.md
Setup/: build.cmd  setup-arm64.msis  setup-bundle.msis  setup-x64.msis  setup-x86.msis
core/: AppSettings.cpp  AppSettings.h  EnvStore.cpp  EnvStore.h  EnvWriter.cpp  EnvWriter.h  SnapshotStore.cpp  SnapshotStore.h  VarDescriptions.cpp  VarDescriptions.h
docs/: NOTES-FOR-REVIEWERS.md  PHASE-1.md  PHASE-2.md  PHASE-3-SUMMARY.md  PHASE-3.md  PHASE-4.md  ROADMAP.md  plan-process-scope.md
scratch/EnvironNativeBaseline/: App.xaml  App.xaml.cpp  App.xaml.h  EnvironNativeBaseline.vcxproj  MainWindow.idl  MainWindow.xaml  MainWindow.xaml.cpp  MainWindow.xaml.h  MainWindow_h.h  XamlMetaDataProvider_h.h  app.manifest  main.cpp  packages.config  pch.h
scripts/: copy-runtime.cmake  generate-selfcontained-manifest.ps1  set-version.ps1
setup/: environ-arm64.msis  environ-x64.msis  setup-bundle.msis  setup-x64.cmd  setup-x64.msis
src/core/: AppSettings.cpp  AppSettings.h  EnvExport.cpp  EnvExport.h  EnvStore.cpp  EnvStore.h  EnvWriter.cpp  EnvWriter.h  KnowledgeBase.cpp  KnowledgeBase.h  SnapshotStore.cpp  SnapshotStore.h
src/ui/: App.cpp  App.h  EnvironmentPage.cpp  EnvironmentPage.h  HistoryPage.cpp  HistoryPage.h  MainWindow.cpp  MainWindow.h  SettingsPage.cpp  SettingsPage.h  main.cpp  pch.h
src/win32/: app.cpp  app.h  d2dwindow.cpp  d2dwindow.h  grid.cpp  grid.h  gridview.cpp  gridview.h  historyview.cpp  historyview.h  mainwindow.cpp  mainwindow.h  theme.cpp  theme.h  theme.toml  themeselectionview.cpp  themeselectionview.h  view.h
themes/: catppuccin-latte.yaml  catppuccin-macchiato.yaml  catppuccin-mocha.yaml  dracula.yaml  everforest-dark-hard.yaml  gruvbox-dark-hard.yaml  gruvbox-light-hard.yaml  nord.yaml  rose-pine-dawn.yaml  rose-pine.yaml  tokyo-night-dark.yaml  tomorrow-night-blue.yaml
